# S25-11-Minimizing-Bits

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  decoder.cpp  decoder.h  demoOut.txt  dockerfile  encoder.cpp  encoder.h  integration_test.py  main.cpp  makeDictFromFile.cpp  parser.cpp  parser.h  preprocessor.cpp  preprocessor.h  preprocessorTestFile.txt  tempdictionary.txt  test_decoder.cpp  test_encoder.cpp  test_parser.cpp  test_preprocessor.cpp  test_wordbank.cpp  testparser.txt  unittests.cpp  wordBank.cpp  wordbank.cpp  wordbank.h
CDRTesting/: CDR_default_char_bank.txt  CDR_default_dict.txt  CDR_demo.cpp  dict.txt  example_out1.txt  example_out4.txt
ERL_encoder/: decoder.h  encoder.h  main.cpp  parser.h  preprocessor.cpp  preprocessor.h  preprocessorTestFile.txt  wordBank.h
InitialTesting/: PDR_demo.cpp  PDR_demo_2.cpp  PDR_demo_2_out.txt
demos/CDR/: CDR_default_char_bank.txt  CDR_demo.cpp  example_out3.txt  message.txt
demos/PDR/: PDR_demo_2_out.txt  PDR_demo_3_Finding_Optimizations.cpp
exampleTXT/: SimpleSabotageFieldManual.txt  TimSandsWiki.txt
scripts/: coverage.sh  tidy.sh
testing/CDR/: CDR_default_char_bank.txt  CDR_default_dict.txt  example_out1.txt  example_out2.txt  example_out3.txt  example_out4.txt  example_out5.txt  message.txt
testing/PDR/: PDR_demo.cpp  PDR_demo_2.cpp  PDR_demo_2_out.txt  PDR_demo_3_Finding_Optimizations.cpp  dict.txt
tests/: TheThreeMusketeers.txt  defaultdictionary.txt  inClassDemo.txt  integration_test.py  preprocessorTestFile.txt  testparser.txt
